// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab applies active styling when isActive is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "minWidth": 0,
      "paddingBottom": 8,
      "paddingLeft": 32,
      "paddingRight": 32,
      "paddingTop": 8,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "color": "#121314",
          "fontWeight": "500",
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;

exports[`Tab applies custom style and textStyle 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "red",
      "flexDirection": "row",
      "justifyContent": "center",
      "minWidth": 0,
      "paddingBottom": 8,
      "paddingLeft": 32,
      "paddingRight": 32,
      "paddingTop": 8,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "color": "#686e7d",
          "fontSize": 18,
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;

exports[`Tab applies inactive styling when isActive is false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "minWidth": 0,
      "paddingBottom": 8,
      "paddingLeft": 32,
      "paddingRight": 32,
      "paddingTop": 8,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "color": "#686e7d",
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;

exports[`Tab renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "minWidth": 0,
      "paddingBottom": 8,
      "paddingLeft": 32,
      "paddingRight": 32,
      "paddingTop": 8,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "color": "#686e7d",
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;
